--- a/server/composer.json
+++ b/server/composer.json
@@ -4,5 +4,14 @@
     "slim/slim": "^4.13",
     "slim/psr7": "^1.6",
     "phpmailer/phpmailer": "^6.9"
-  }
+  },
+  "autoload": {
+    "psr-4": {
+        "Storage\\": "storage/",
+        "Service\\": "service/",
+        "Controller\\": "controller/",
+        "Entity\\": "entity/"
+    }
+}
+
 }
