--- a/server/composer.json
+++ b/server/composer.json
@@ -3,7 +3,8 @@
     "ramsey/uuid":"4.7.5",
     "slim/slim": "^4.13",
     "slim/psr7": "^1.6",
-    "phpmailer/phpmailer": "^6.9"
+    "phpmailer/phpmailer": "^6.9",
+    "google/apiclient": "^2.0"
   },
   "autoload": {
     "psr-4": {
