--- a/server/composer.json
+++ b/server/composer.json
@@ -4,7 +4,8 @@
     "slim/slim": "^4.13",
     "slim/psr7": "^1.6",
     "phpmailer/phpmailer": "^6.9",
-    "google/apiclient": "^2.0"
+    "google/apiclient": "^2.0",
+    "tuupola/cors-middleware": "^1.4"
   },
   "autoload": {
     "psr-4": {
