api-login_register middleware-verifytoken_verifyemail

--- a/server/composer.json
+++ b/server/composer.json
@@ -4,15 +4,16 @@
     "slim/slim": "^4.13",
     "slim/psr7": "^1.6",
     "phpmailer/phpmailer": "^6.9",
-    "google/apiclient": "^2.0",
-    "tuupola/cors-middleware": "^1.4"
+    "tuupola/cors-middleware": "^1.4",
+    "firebase/php-jwt": " ^5.4"
   },
   "autoload": {
     "psr-4": {
         "Storage\\": "storage/",
         "Service\\": "service/",
         "Controller\\": "controller/",
-        "Entity\\": "entity/"
+        "Entity\\": "entity/",
+        "Middleware\\": "middleware/" 
     }
 }
 
