--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
+    "neovim": "^5.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
