--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "neovim": "^5.0.1",
