--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,15 @@
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "neovim": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-gantt-timeline": "^0.3.8",
+    "react-google-charts": "^4.0.1",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-sizeme": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
