--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "js-cookie": "^3.0.5",
     "neovim": "^5.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-table-6": "^6.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
