--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.2.2",
+    "@syncfusion/ej2-react-gantt": "^25.1.40",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "neovim": "^5.0.1",
+    "npm": "^10.5.2",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-draggable": "^4.4.6",
+    "react-icons": "^5.0.1",
+    "react-resizable": "^3.0.5",
+    "react-split-pane": "^0.1.92",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
