fix get data timeline

--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.2.2",
-    "@syncfusion/ej2-react-gantt": "^25.1.40",
+    "@syncfusion/ej2-react-gantt": "^18.4.49",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "install": "^0.13.0",
@@ -23,6 +23,7 @@
     "npm": "^10.5.2",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.8.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
